--- a/index.html
+++ b/index.html
@@ -111,9 +111,84 @@
         </div>
       </div>
     </section>
-    <section class="car seccion4"></section>
-    <section class="seccion5"></section>
-    <section class="seccion6"></section>
-    <section class="seccion7"></section>
+    <section class="car seccion4">
+      <div>
+        <img class="img4" src="img\media-sopa.png" alt="" />
+      </div>
+      <div class="text">
+        <p class="Parrafote">
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+          excepturi quod impedit, accusamus nobis dolorem, voluptas beatae natus
+          vitae vero quisquam quasi aspernatur. Doloribus dolorem, suscipit
+          "
+        </p>
+        <div class="centro4">
+          <img class="foto" src="img\Malte.png" alt="" />
+          <div>
+            <p class="autor">Malte Kramer</p>
+            <p class="arroba">@luxuryPresence</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <p class="our2">Our Happy</p>
+        <p class="our2">Costumers</p>
+        <p class="claswww">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </section>
+    <section class="seccion5">
+      <div class="contenido-s5">
+        <div class="dots">
+          <span></span><span></span><span></span>
+        </div>
+        <h3>Ready to get started?</h3>
+        <p>Get a guided demo Lorem ipsum dolor sit amet</p>
+      </div>
+      <div class="form-s5">
+        <form class="email-form">
+          <input type="email" placeholder="Email address" />
+          <button type="submit">GET STARTED &gt;</button>
+        </form>
+      </div>
+    </section>
+
+    <section class="seccion6">
+      <div class="columna-s6">
+        <p>info@example.com</p>
+        </div>
+      <div class="columna-s6">
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
+        <a href="#">FAQ</a>
+        <a href="#">Privacy Policy</a>
+      </div>
+      <div class="columna-s6">
+        <a href="#">Lorem</a>
+        <a href="#">Ipsum</a>
+        <a href="#">Dolor</a>
+        <a href="#">Sit amet</a>
+        <a href="#">Ipsum dolor</a>
+      </div>
+      <div class="columna-s6">
+        <a href="#">Lorem</a>
+        <a href="#">Ipsum</a>
+        <a href="#">Dolor</a>
+        <a href="#">Sit amet</a>
+        <a href="#">Ipsum dolor</a>
+      </div>
+    </section>
+
+    <section class="seccion7">
+      <div class="copyright-s7">
+        <p>© 2019 All right reserved Inc.</p>
+      </div>
+      <div class="links-s7">
+        <a href="#">Privacy</a>
+        <a href="#">Accessibility</a>
+        <a href="#">Terms</a>
+      </div>
+    </section>
+  </body>
+</html>
   </body>
 </html>
